# vmod_oidc

./: API.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  TODO.md  example.vcl  spec.md
.cargo/: config.toml
.github/workflows/: build.yml
fixtures/: README.md
fixtures/cookies/: expired-session.cookie  state-expired.cookie  state-missing-claims.cookie  state-valid.cookie
fixtures/test-keys/: rsa-public.pem
fixtures/tokens/: expired.jwt  valid.jwt  wrong-signature.jwt
integration/: README.md  docker-compose.yml  run.sh
src/: crypto.rs  error.rs  helpers.rs  jwks.rs  lib.rs  vmod.rs
tests/: README.md  keycloak_integration.rs  test-01-redirect-unauthenticated.vtc  test-02-valid-session.vtc  test-03-expired-session.vtc  test-04-invalid-cookie.vtc  test-05-callback-valid.vtc  test-06-callback-invalid-state.vtc  test-07-callback-invalid-token.vtc  test-08-claims.vtc  test-09-public-path.vtc  test-10-multiple-providers.vtc
tests/fixtures/: README.md
tests/fixtures/cookies/: expired-session.cookie  state-for-expired-token.cookie  state-invalid-return-to.cookie  state-missing-claims.cookie  state-valid.cookie  state-wrong-audience.cookie  state-wrong-issuer.cookie  state-wrong-signature.cookie  valid-session.cookie
tests/fixtures/test-keys/: jwks.json  rsa-private.pem  rsa-public.pem  wrong-key-private.pem
tests/fixtures/tokens/: expired.jwt  missing-claims.jwt  valid.jwt  wrong-audience.jwt  wrong-issuer.jwt  wrong-signature.jwt
tests/integration/: README.md
tests/integration/keycloak/: test-realm.json
tools/gen-test-fixtures/: Cargo.toml
(+1 files in other folders)
