[package]
name = "vmod_oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
url = "2.5.4"

[dev-dependencies]
mockito = "1.6.1"
